--- a/FitNesseRoot/PrizeCalculation.wiki
+++ b/FitNesseRoot/PrizeCalculation.wiki
@@ -1,6 +1,8 @@
 ---
 Test
 ---
+OnlineLottery
+
 !define COMMAND_PATTERN {%m -r fitnesse.fitserver.FitServer,dotnet2\fit.dll %p}
 !define TEST_RUNNER {dotnet2\Runner.exe}
 !path ${RootPath}\OnlineLottery\bin\Release\OnlineLottery.dll
