Nicely structured test suite
- Removed all the pages that where on the top level
- Created a suite for all purchase ticket tests
- Created a high level suite to contain every other test and suite ; Problem: Sub-suite fails when run from top level suite but passes when started on its own

--- a/FitNesseRoot/OnlineLottery.wiki
+++ b/FitNesseRoot/OnlineLottery.wiki
@@ -1,7 +1,8 @@
+---
+Suite
+---
+!define COMMAND_PATTERN {%m -r fitnesse.fitserver.FitServer,dotnet2\fit.dll %p}
+!define TEST_RUNNER {dotnet2\Runner.exe}
+!path ${RootPath}\OnlineLottery\bin\Release\OnlineLottery.dll
 !1 Online Lottery
-
-PrizeCalculation
-PlayerRegistration
-PurchaseTicket
-PurchaseTicketNotEnoughMoney
-PurchaseTicketInvalidUserInputs
+!contents -R
