--- a/FitNesseRoot/RecentChanges.wiki
+++ b/FitNesseRoot/RecentChanges.wiki
@@ -1,7 +1,19 @@
+|OnlineLottery.PrizeCalculation||01:03:51 Do, Apr 06, 2017|
+|OnlineLottery.PlayerRegistration||01:02:47 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.SetUp||24:59:43 Do, Apr 06, 2017|
+|OnlineLottery||24:54:42 Do, Apr 06, 2017|
+|OnlineLottery.PageHeader||24:52:09 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite||24:38:18 Do, Apr 06, 2017|
+|PrizeCalculation||24:19:55 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.NegativeAmountOfTickets||24:11:56 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.LessThanSixNumbers||24:01:16 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.MoreThanSixNumbers||24:00:49 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.NotEnoughMoney||23:59:27 Mi, Apr 05, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.BasicCase||23:58:38 Mi, Apr 05, 2017|
+|PurchaseTicketTestSuite||23:35:23 Mi, Apr 05, 2017|
+|SetUp||23:29:10 Mi, Apr 05, 2017|
 |PurchaseTicketInvalidUserInputs||22:21:46 Mi, Apr 05, 2017|
-|OnlineLottery||22:11:13 Mi, Apr 05, 2017|
 |PurchaseTicket||22:03:01 Mi, Apr 05, 2017|
 |PurchaseTicketNotEnoughMoney||22:02:13 Mi, Apr 05, 2017|
 |PlayerRegistration||21:30:45 Di, Apr 04, 2017|
-|PrizeCalculation||21:30:32 Di, Apr 04, 2017|
 |FrontPage||23:07:14 So, Apr 02, 2017|
