--- a/FitNesseRoot/OnlineLottery/PurchaseTicketTestSuite/SetUp.wiki
+++ b/FitNesseRoot/OnlineLottery/PurchaseTicketTestSuite/SetUp.wiki
@@ -1,6 +1,6 @@
 !|import|
 |OnlineLottery.Test.PurchaseTicket|
 
-|Set Up Test Environment|
+|Set Up Purchase Ticket Test Environment|
 |Create Draw|01.01.2017|
 |New player|john|registers and deposits|50|dollars|
