Replace hardcoded username and drawdate with variables

--- a/FitNesseRoot/RecentChanges.wiki
+++ b/FitNesseRoot/RecentChanges.wiki
@@ -1,15 +1,16 @@
-|OnlineLottery||21:36:39 Do, Apr 06, 2017|
-|OnlineLottery.PurchaseTicketTestSuite.SetUp||01:35:39 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.NotEnoughMoney||22:14:46 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.NegativeAmountOfTickets||22:14:26 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.MoreThanSixNumbers||22:14:04 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.LessThanSixNumbers||22:13:44 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.BasicCase||22:13:19 Do, Apr 06, 2017|
+|OnlineLottery.PurchaseTicketTestSuite.SetUp||22:12:57 Do, Apr 06, 2017|
+|||22:01:12 Do, Apr 06, 2017|
+|OnlineLottery||22:01:01 Do, Apr 06, 2017|
 |OnlineLottery.PrizeCalculation||01:03:51 Do, Apr 06, 2017|
 |OnlineLottery.PlayerRegistration||01:02:47 Do, Apr 06, 2017|
 |OnlineLottery.PageHeader||24:52:09 Do, Apr 06, 2017|
 |OnlineLottery.PurchaseTicketTestSuite||24:38:18 Do, Apr 06, 2017|
 |PrizeCalculation||24:19:55 Do, Apr 06, 2017|
-|OnlineLottery.PurchaseTicketTestSuite.NegativeAmountOfTickets||24:11:56 Do, Apr 06, 2017|
-|OnlineLottery.PurchaseTicketTestSuite.LessThanSixNumbers||24:01:16 Do, Apr 06, 2017|
-|OnlineLottery.PurchaseTicketTestSuite.MoreThanSixNumbers||24:00:49 Do, Apr 06, 2017|
-|OnlineLottery.PurchaseTicketTestSuite.NotEnoughMoney||23:59:27 Mi, Apr 05, 2017|
-|OnlineLottery.PurchaseTicketTestSuite.BasicCase||23:58:38 Mi, Apr 05, 2017|
 |PurchaseTicketTestSuite||23:35:23 Mi, Apr 05, 2017|
 |SetUp||23:29:10 Mi, Apr 05, 2017|
 |PurchaseTicketInvalidUserInputs||22:21:46 Mi, Apr 05, 2017|
