--- a/FitNesseRoot/OnlineLottery/PurchaseTicketTestSuite/LessThanSixNumbers.wiki
+++ b/FitNesseRoot/OnlineLottery/PurchaseTicketTestSuite/LessThanSixNumbers.wiki
@@ -4,7 +4,7 @@ Test
 !3 When a user selects less than six numbers, the ticket purchase should be refused. The ticket should not be registered, account balance and pool value remain untouched.
 
 |Purchase Ticket|
-|reject|Player|john|buys a ticket with numbers|1,3,4,5,8| for draw on|01.01.2017|
-|Check|Pool value for draw on|01.01.2017|is|0|
-|Check|Account balance for|john|is|50|
-|not|Ticket with numbers|1,3,4,5,8|for|10|dollars is registered for player|john|for draw on|01.01.2017|
+|reject|Player|${username}|buys a ticket with numbers|1,3,4,5,8| for draw on|${drawDate}|
+|Check|Pool value for draw on|${drawDate}|is|0|
+|Check|Account balance for|${username}|is|50|
+|not|Ticket with numbers|1,3,4,5,8|for|10|dollars is registered for player|${username}|for draw on|${drawDate}|
