--- a/FitNesseRoot/OnlineLottery/PurchaseTicketTestSuite/NotEnoughMoney.wiki
+++ b/FitNesseRoot/OnlineLottery/PurchaseTicketTestSuite/NotEnoughMoney.wiki
@@ -4,8 +4,8 @@ Test
 !3 When there is not enough money in the account, the ticket purchase should be refused. The ticket should not be registered, account balance and pool value remain untouched.
 
 |Purchase Ticket|
-|Player|john|has|50|dollars|
-|reject|Player|john|buys|10|tickets with numbers|1,3,4,5,8,10| for draw on|01.01.2017|
-|Check|Pool value for draw on|01.01.2017|is|0|
-|Check|Account balance for|john|is|50|
-|not|Ticket with numbers|1,3,4,5,8,10|for|100|dollars is registered for player|john|for draw on|01.01.2017|
+|Player|${username}|has|50|dollars|
+|reject|Player|${username}|buys|10|tickets with numbers|1,3,4,5,8,10| for draw on|${drawDate}|
+|Check|Pool value for draw on|${drawDate}|is|0|
+|Check|Account balance for|${username}|is|50|
+|not|Ticket with numbers|1,3,4,5,8,10|for|100|dollars is registered for player|${username}|for draw on|${drawDate}|
