--- a/FitNesseRoot/OnlineLottery/PurchaseTicketTestSuite/SetUp.wiki
+++ b/FitNesseRoot/OnlineLottery/PurchaseTicketTestSuite/SetUp.wiki
@@ -1,6 +1,8 @@
 !|import|
 |OnlineLottery.Test.PurchaseTicket|
 
+!define username {Arthur}
+!define drawDate {01.01.2018}
 |Set Up Purchase Ticket Test Environment|
-|Create Draw|01.01.2017|
-|New player|john|registers and deposits|50|dollars|
+|Create Draw|${drawDate}|
+|New player|${username}|registers and deposits|50|dollars|
